--- a/manifest.json
+++ b/manifest.json
@@ -42,5 +42,6 @@
     ],
     "web_accessible_resources": [
     "images/*.png"
-    ]
+    ],
+    "content_security_policy": "script-src 'self' https://www.google-analytics.com; object-src 'self'"
 }
