--- a/manifest.json
+++ b/manifest.json
@@ -30,19 +30,19 @@
     "content_scripts": [
         {
             "matches": ["https://robinhood.com/account?mintRobinhood=true"],
-            "js": ["js/external/jquery.min.js", "js/shared.js", "js/robinhood/robinhood.js"]
+            "js": ["js/external/jquery/jquery.min.js", "js/shared.js", "js/robinhood/robinhood.js"]
         },
         {
             "matches": ["https://mint.intuit.com/settings.event?filter=property&addRobinhood=true*"],
-            "js": ["js/external/jquery.min.js", "js/shared.js", "js/mint/mint-update.js"]
+            "js": ["js/external/jquery/jquery.min.js", "js/shared.js", "js/mint/mint-update.js"]
         },
         {
             "matches": ["https://mint.intuit.com/addprovider.event?addRobinhood=true"],
-            "js": ["js/external/jquery.min.js", "js/shared.js", "js/mint/mint-add.js"]
+            "js": ["js/external/jquery/jquery.min.js", "js/shared.js", "js/mint/mint-add.js"]
         },
         {
             "matches": ["https://mint.intuit.com/overview.event*"],
-            "js": ["js/external/jquery.min.js","js/external/macOSNotif.min.js", "js/mint/mint-overview.js"],
+            "js": ["js/external/jquery/jquery.min.js","js/external/macOSNotif/macOSNotif.min.js", "js/mint/mint-overview.js"],
             "css": ["css/mint-overview.css","css/macOSNotif.min.css"]
         }
 
