--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 
     "name": "Robinhood Mint Sync for Chrome",
     "description": "Automatically add your Robinhood portfolio to Mint",
-    "version": "1.3.0",
+    "version": "2.0.0",
     "author": "George Walker",
 
     "icons": {
@@ -14,7 +14,7 @@
     },
 
     "background": {
-        "scripts": ["js/analytics.js","js/background/event-listener.js","js/background/update-install-listener.js","js/background/browser-action.js"]
+        "scripts": ["js/background/event-listener.js","js/background/update-install-listener.js","js/background/browser-action.js"]
     },
 
     "browser_action": {
@@ -65,6 +65,5 @@
     ],
     "web_accessible_resources": [
     "images/*.png"
-    ],
-    "content_security_policy": "script-src 'self' https://www.google-analytics.com https://www.googletagmanager.com; object-src 'self'"
+    ]
 }
