--- a/package.json
+++ b/package.json
@@ -6,10 +6,25 @@
     "url": "git+https://github.com/pkmnct/robinhood-mint-sync-chrome.git"
   },
   "author": "George W. Walker",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/pkmnct/robinhood-mint-sync-chrome/issues"
   },
   "homepage": "https://github.com/pkmnct/robinhood-mint-sync-chrome#readme",
   "dependencies": {
+    "copy-webpack-plugin": "^7.0.0"
+  },
+  "devDependencies": {
+    "@types/chrome": "0.0.128",
+    "rimraf": "^3.0.2",
+    "ts-loader": "^8.0.14",
+    "typescript": "^4.1.3",
+    "webpack": "^5.15.0",
+    "webpack-cli": "^4.3.1"
+  },
+  "scripts": {
+    "watch": "webpack --config webpack/webpack.dev.js --watch",
+    "build": "webpack --config webpack/webpack.prod.js",
+    "clean": "rimraf dist"
   }
 }
