--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
 
     "name": "Robinhood Mint Sync for Chrome",
     "description": "Automatically add your Robinhood portfolio to Mint",
-    "version": "2.0.0",
+    "version": "3.0.0",
     "author": "George Walker",
 
     "icons": {
@@ -14,7 +14,7 @@
     },
 
     "background": {
-        "scripts": ["js/background/event-listener.js","js/background/update-install-listener.js","js/background/browser-action.js"]
+        "scripts": ["js/background/mains","js/background/update_install_listener.js","js/background/browser_action.js"]
     },
 
     "browser_action": {
@@ -30,29 +30,23 @@
     "content_scripts": [
         {
             "matches": ["https://robinhood.com/account?mintRobinhood=true"],
-            "js": ["js/external/jquery/jquery.min.js", "js/shared.js", "js/robinhood/robinhood.js"]
+            "js": ["js/content/robinhood/main.js"]
         },
         {
             "matches": ["https://robinhood.com/login?redirectMint=true"],
-            "js": ["js/external/jquery/jquery.min.js","js/shared.js", "js/robinhood/login.js"]
+            "js": ["js/content/robinhood/login.js"]
         },
         {
-            "matches": ["https://mint.intuit.com/settings.event?filter=property&addRobinhood=true*"],
-            "js": ["js/external/jquery/jquery.min.js", "js/shared.js", "js/mint/mint-update.js"]
+            "matches": ["https://mint.intuit.com/settings.event?filter=property&addRobinhood=true"],
+            "js": ["js/content/mint/properties/update.js"]
         },
         {
             "matches": ["https://mint.intuit.com/addprovider.event?addRobinhood=true"],
-            "js": ["js/external/jquery/jquery.min.js", "js/shared.js", "js/mint/mint-add.js"]
-        },
-        {
-            "matches": ["https://mint.intuit.com/overview.event*"],
-            "js": ["js/external/jquery/jquery.min.js","js/external/noty/noty.js", "js/mint/mint-overview.js"],
-            "css": ["css/mint-overview.css","css/noty.css"]
+            "js": ["js/content/mint/properties/setup.js"]
         },
         {
             "matches": ["https://mint.intuit.com/*"],
-            "js": ["js/mint/mint.js"],
-            "css": ["css/mint.css"]
+            "js": ["js/content/mint/main.js"]
         }
 
     ],
