--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
   },
   "devDependencies": {
     "@types/chrome": "0.0.128",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
