--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,63 +1,66 @@
 {
-    "manifest_version": 2,
+  "manifest_version": 2,
 
-    "name": "Robinhood Mint Sync for Chrome",
-    "description": "Automatically add your Robinhood portfolio to Mint",
-    "version": "3.0.0",
-    "author": "George Walker",
+  "name": "Robinhood Mint Sync for Chrome",
+  "description": "Automatically add your Robinhood portfolio to Mint",
+  "version": "3.0.0",
+  "author": "George Walker",
 
-    "icons": {
-        "16": "images/icon16.png",
-        "48": "images/icon48.png",
-        "128": "images/icon128.png",
-        "512": "images/icon512.png"
-    },
+  "icons": {
+    "16": "images/icon16.png",
+    "48": "images/icon48.png",
+    "128": "images/icon128.png",
+    "512": "images/icon512.png"
+  },
 
-    "background": {
-        "scripts": ["js/background/mains","js/background/update_install_listener.js","js/background/browser_action.js"]
-    },
-
-    "browser_action": {
-        "default_icon": {
-            "16": "images/icon16.png",
-            "48": "images/icon48.png",
-            "128": "images/icon128.png",
-            "512": "images/icon512.png"
-        },
-        "default_title": "Robinhood Mint Sync for Chrome"
-    },
-
-    "content_scripts": [
-        {
-            "matches": ["https://robinhood.com/account?mintRobinhood=true"],
-            "js": ["js/content/robinhood/main.js"]
-        },
-        {
-            "matches": ["https://robinhood.com/login?redirectMint=true"],
-            "js": ["js/content/robinhood/login.js"]
-        },
-        {
-            "matches": ["https://mint.intuit.com/settings.event?filter=property&addRobinhood=true"],
-            "js": ["js/content/mint/properties/update.js"]
-        },
-        {
-            "matches": ["https://mint.intuit.com/addprovider.event?addRobinhood=true"],
-            "js": ["js/content/mint/properties/setup.js"]
-        },
-        {
-            "matches": ["https://mint.intuit.com/*"],
-            "js": ["js/content/mint/main.js"]
-        }
-
-    ],
-    "options_ui": {
-        "page": "html/settings.html",
-        "open_in_tab": true
-    },
-    "permissions": [
-        "storage"
-    ],
-    "web_accessible_resources": [
-    "images/*.png"
+  "background": {
+    "scripts": [
+      "js/background/main.js",
+      "js/background/update_install_listener.js",
+      "js/background/browser_action.js"
     ]
+  },
+
+  "browser_action": {
+    "default_icon": {
+      "16": "images/icon16.png",
+      "48": "images/icon48.png",
+      "128": "images/icon128.png",
+      "512": "images/icon512.png"
+    },
+    "default_title": "Robinhood Mint Sync for Chrome"
+  },
+
+  "content_scripts": [
+    {
+      "matches": ["https://robinhood.com/account?mintRobinhood=true"],
+      "js": ["js/content/robinhood/main.js"]
+    },
+    {
+      "matches": ["https://robinhood.com/login?redirectMint=true"],
+      "js": ["js/content/robinhood/login.js"]
+    },
+    {
+      "matches": [
+        "https://mint.intuit.com/settings.event?filter=property&addRobinhood=true"
+      ],
+      "js": ["js/content/mint/properties/update.js"]
+    },
+    {
+      "matches": [
+        "https://mint.intuit.com/addprovider.event?addRobinhood=true"
+      ],
+      "js": ["js/content/mint/properties/setup.js"]
+    },
+    {
+      "matches": ["https://mint.intuit.com/*"],
+      "js": ["js/content/mint/main.js"]
+    }
+  ],
+  "options_ui": {
+    "page": "html/settings.html",
+    "open_in_tab": true
+  },
+  "permissions": ["storage"],
+  "web_accessible_resources": ["images/*.png"]
 }
