--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "rootDir": "src",
         "outDir": "dist/js",
         "noEmitOnError": true,
-        "typeRoots": [ "node_modules/@types" ]
+        "typeRoots": [ "node_modules/@types" ],
+        "moduleResolution": "node"
     }
 }
