--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
         "module": "es6",
         "target": "es6",
         "noImplicitAny": false,
-        "sourceMap": false,
+        "sourceMap": true,
+        "inlineSources": true,
         "rootDir": "src",
         "outDir": "dist/js",
         "noEmitOnError": true,
