--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "clean": "rimraf dist",
     "prerelease": "npm run clean",
     "release": "npm run build",
-    "postrelease": "cd dist && cross-var bestzip ../$npm_package_name@$npm_package_version.zip * && cd .."
+    "zip": "cd dist && cross-var bestzip ../$npm_package_name@$npm_package_version.zip * && cd ..",
+    "postrelease": "rimraf *.zip && npm run zip"
   }
 }
