--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "release": "npm run build",
     "zip": "cd dist && cross-var bestzip ../$npm_package_name@$npm_package_version.zip * && cd ..",
     "postrelease": "rimraf *.zip && npm run zip",
-    "eslint": "eslint --fix src/**",
-    "prettier": "prettier --write src/**"
+    "eslint": "eslint src/**",
+    "eslint:fix": "eslint --fix src/**",
+    "prettier": "prettier src/**",
+    "prettier:fix": "prettier --write src/**"
   },
   "husky": {
     "hooks": {
