--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "postrelease": "rimraf *.zip && npm run zip",
     "eslint": "eslint src/**",
     "eslint:fix": "eslint --fix src/**",
-    "prettier": "prettier src/**",
+    "prettier": "prettier --check src/**",
     "prettier:fix": "prettier --write src/**"
   },
   "husky": {
