--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Code Checks
+name: PR/Push Checks
 
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
