Publish ESLint results

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "release": "npm run build",
     "zip": "cd dist && cross-var bestzip ../$npm_package_name@$npm_package_version.zip * && cd ..",
     "postrelease": "rimraf *.zip && npm run zip",
-    "eslint": "eslint src/**",
+    "eslint": "eslint --format junit --output-file ./reports/eslint.xml src/**",
     "eslint:fix": "eslint --fix src/**",
     "prettier": "prettier --check src/**",
     "prettier:fix": "prettier --write src/**"
