--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,12 +1,12 @@
 name: CI
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -26,30 +26,37 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.1.4
         with:
-          node-version: '12'
-      
+          node-version: "12"
+
       - name: Setup Dependencies
         run: npm ci
 
       - name: Build Extension
         run: npm run build
-  
+
   code-formatting:
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v2
-        
+
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.1.4
         with:
-          node-version: '12' 
-      
+          node-version: "12"
+
       - name: Setup Dependencies
         run: npm ci
 
       - name: Run Prettier
         run: npm run prettier
-        
+
       - name: Run ESLint
         run: npm run eslint
+
+      - name: Publish ESLint Results
+        uses: EnricoMi/publish-unit-test-result-action@v1.6
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          check_name: ESLint Results
+          files: reports/eslint.xml
