--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,24 +1,20 @@
-name: CI
+name: PR/Push Checks
 
-# Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
+    name: Build Extension Source
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
@@ -26,30 +22,37 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.1.4
         with:
-          node-version: '12'
-      
+          node-version: "12"
+
       - name: Setup Dependencies
         run: npm ci
 
       - name: Build Extension
         run: npm run build
-  
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: compiled-extension
+          path: dist
+
   code-formatting:
+    name: Check Code Formatting
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v2
-        
+
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.1.4
         with:
-          node-version: '12' 
-      
+          node-version: "12"
+
       - name: Setup Dependencies
         run: npm ci
 
       - name: Run Prettier
         run: npm run prettier
-        
+
       - name: Run ESLint
         run: npm run eslint
