--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robinhood-mint-sync-chrome",
-  "version": "3.2.0",
+  "version": "3.3.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pkmnct/robinhood-mint-sync-chrome.git"
@@ -43,7 +43,7 @@
     "zip": "cd dist && cross-var bestzip ../$npm_package_name@$npm_package_version.zip * && cd ..",
     "postrelease": "rimraf *.zip && npm run zip",
     "eslint": "eslint src/**",
-    "eslint:fix": "eslint --fix src/**",
+    "eslint:fix": "eslint --fix --max-warnings 0 src/**",
     "prettier": "prettier --check src/**",
     "prettier:fix": "prettier --write src/**"
   },
