--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,12 +18,6 @@ jobs:
         with:
           draft: true
 
-  publish-release:
-    name: Publish Compiled Code to Release
-    runs-on: ubuntu-latest
-    needs: [create-release]
-
-    steps:
       - name: Download compiled-extension Artifact
         uses: actions/download-artifact@v2.0.8
         with:
@@ -32,7 +26,7 @@ jobs:
       - name: Upload Artifact to Release
         uses: actions/upload-release-asset@v1.0.2
         with:
-          upload_url: ${{ jobs.create_release.steps.create_release.outputs.upload_url }}
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./compiled-extension.zip
           asset_name: robinhood-mint-sync-chrome.zip
           asset_content_type: application/zip
