--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@typescript-eslint/parser": "^4.13.0",
     "bestzip": "^2.1.7",
     "copy-webpack-plugin": "^7.0.0",
+    "cross-env": "^7.0.3",
     "cross-var": "^1.1.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.1.0",
@@ -31,6 +32,7 @@
     "rimraf": "^3.0.2",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
+    "unzipper": "^0.10.11",
     "webpack": "^5.15.0",
     "webpack-cli": "^4.3.1"
   },
@@ -45,7 +47,8 @@
     "eslint": "eslint src/**",
     "eslint:fix": "eslint --fix --max-warnings 0 src/**",
     "prettier": "prettier --check src/**",
-    "prettier:fix": "prettier --write src/**"
+    "prettier:fix": "prettier --write src/**",
+    "postinstall": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node ./get-stellar.js"
   },
   "husky": {
     "hooks": {
