--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: compiled-extension
-          path: dist
+          path: dist/extension
 
   code-formatting:
     name: Check Code Formatting
