--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "clean": "rimraf dist",
     "prerelease": "npm run clean",
     "release": "npm run build",
-    "zip": "cd dist && cross-var bestzip ../$npm_package_name@$npm_package_version.zip * && cd ..",
+    "zip": "cd dist/extension && cross-var bestzip ../$npm_package_name@$npm_package_version.zip * && cd ../..",
     "postrelease": "rimraf *.zip && npm run zip",
     "eslint": "eslint src/**",
     "eslint:fix": "eslint --fix --max-warnings 0 src/**",
