--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "eslint:fix": "eslint --fix --max-warnings 0 src/**",
     "prettier": "prettier --check src/**",
     "prettier:fix": "prettier --write src/**",
-    "postinstall": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node ./get-stellar.js"
+    "get:stellar": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node ./get-stellar.js",
+    "postinstall": "npm run get:stellar",
+    "postci": "npm run get:stellar"
   },
   "husky": {
     "hooks": {
