--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "prettier": "prettier --check src/**",
     "prettier:fix": "prettier --write src/**",
     "get:stellar": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node ./get-stellar.js",
-    "postinstall": "npm run get:stellar"
+    "postinstall": "npm run get:stellar",
+    "manifest:update": "node manifest-helper.js",
+    "postversion": "npm run manifest:update"
   },
   "husky": {
     "hooks": {
