--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "get:stellar": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node ./get-stellar.js",
     "postinstall": "npm run get:stellar",
     "manifest:update": "node manifest-helper.js",
-    "postversion": "npm run manifest:update"
+    "postversion": "npm run manifest:update && git add . && git commit -m Update manifest.json"
   },
   "husky": {
     "hooks": {
