--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,18 +1,15 @@
 {
   "manifest_version": 2,
-
   "name": "Robinhood Mint Sync for Chrome",
   "description": "Automatically add your Robinhood portfolio to Mint",
-  "version": "3.3.0",
+  "version": "3.3.1",
   "author": "George Walker",
-
   "icons": {
     "16": "images/icon16.png",
     "48": "images/icon48.png",
     "128": "images/icon128.png",
     "512": "images/icon512.png"
   },
-
   "background": {
     "scripts": [
       "js/background/main.js",
@@ -20,7 +17,6 @@
       "js/background/browser_action.js"
     ]
   },
-
   "browser_action": {
     "default_icon": {
       "16": "images/icon16.png",
@@ -30,7 +26,6 @@
     },
     "default_title": "Robinhood Mint Sync for Chrome"
   },
-
   "content_scripts": [
     {
       "matches": ["https://robinhood.com/account?syncMint=true"],
@@ -73,10 +68,7 @@
       "css": ["css/triangleFix.css"]
     }
   ],
-  "options_ui": {
-    "page": "html/settings.html",
-    "open_in_tab": true
-  },
+  "options_ui": { "page": "html/settings.html", "open_in_tab": true },
   "permissions": ["storage"],
   "web_accessible_resources": ["images/*.png", "js/external/*"]
 }
