--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
     "typescript": "^4.1.3",
     "unzipper": "^0.10.11",
     "webpack": "^5.15.0",
-    "webpack-cli": "^4.3.1"
+    "webpack-cli": "^4.3.1",
+    "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
     "watch": "webpack --config webpack/webpack.dev.js --watch",
-    "watch:docs": "webpack --config webpack/webpack.docs.js --watch",
+    "docs": "webpack serve --config webpack/webpack.docs.js",
     "build": "webpack --config webpack/webpack.prod.js",
     "build:docs": "webpack --config webpack/webpack.docs.js",
     "clean": "rimraf dist",
