Add fixes for Firefox

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,6 +4,12 @@
   "description": "Automatically add your Robinhood portfolio to Mint",
   "version": "3.3.1",
   "author": "George Walker",
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "robinhood-mint-sync@georgewwalker.com",
+      "strict_min_version": "42.0"
+    }
+  },
   "icons": {
     "16": "images/icon16.png",
     "48": "images/icon48.png",
@@ -11,11 +17,7 @@
     "512": "images/icon512.png"
   },
   "background": {
-    "scripts": [
-      "js/background/main.js",
-      "js/background/update_install_listener.js",
-      "js/background/browser_action.js"
-    ]
+    "scripts": ["js/background/main.js", "js/background/update_install_listener.js", "js/background/browser_action.js"]
   },
   "browser_action": {
     "default_icon": {
@@ -36,31 +38,21 @@
       "js": ["js/content/robinhood/login.js"]
     },
     {
-      "matches": [
-        "https://mint.intuit.com/settings.event?filter=property&addRobinhood=true"
-      ],
+      "matches": ["https://mint.intuit.com/settings.event?filter=property&addRobinhood=true"],
       "js": ["js/content/mint/properties/update.js"]
     },
     {
-      "matches": [
-        "https://mint.intuit.com/settings.event?filter=property&setupRobinhood=true"
-      ],
+      "matches": ["https://mint.intuit.com/settings.event?filter=property&setupRobinhood=true"],
       "js": ["js/content/mint/properties/check.js"]
     },
     {
-      "matches": [
-        "https://mint.intuit.com/settings.event?filter=property&createProperty=true&property=*"
-      ],
+      "matches": ["https://mint.intuit.com/settings.event?filter=property&createProperty=true&property=*"],
       "js": ["js/content/mint/properties/create.js"]
     },
     {
       "matches": ["https://mint.intuit.com/overview.event*"],
       "js": ["js/external/noty/noty.min.js", "js/content/mint/main.js"],
-      "css": [
-        "css/notification.css",
-        "js/external/noty/noty.css",
-        "js/external/noty/themes/relax.css"
-      ]
+      "css": ["css/notification.css", "js/external/noty/noty.css", "js/external/noty/themes/relax.css"]
     },
     {
       "matches": ["https://mint.intuit.com/*"],
@@ -69,6 +61,6 @@
     }
   ],
   "options_ui": { "page": "html/settings.html", "open_in_tab": true },
-  "permissions": ["storage"],
+  "permissions": ["storage", "https://phoenix.robinhood.com/accounts/unified"],
   "web_accessible_resources": ["images/*.png", "js/external/*"]
 }
