--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,15 @@
 {
   "manifest_version": 2,
-  "name": "Robinhood Mint Sync for Chrome",
+  "name": "Robinhood Mint Sync",
   "description": "Automatically add your Robinhood portfolio to Mint",
-  "version": "3.3.1",
+  "version": "3.4.0",
   "author": "George Walker",
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "robinhood-mint-sync@georgewwalker.com",
+      "strict_min_version": "42.0"
+    }
+  },
   "icons": {
     "16": "images/icon16.png",
     "48": "images/icon48.png",
@@ -24,7 +30,7 @@
       "128": "images/icon128.png",
       "512": "images/icon512.png"
     },
-    "default_title": "Robinhood Mint Sync for Chrome"
+    "default_title": "Robinhood Mint Sync"
   },
   "content_scripts": [
     {
@@ -69,6 +75,6 @@
     }
   ],
   "options_ui": { "page": "html/settings.html", "open_in_tab": true },
-  "permissions": ["storage"],
+  "permissions": ["storage", "https://phoenix.robinhood.com/accounts/unified"],
   "web_accessible_resources": ["images/*.png", "js/external/*"]
 }
