--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "eslint:fix": "eslint --fix --max-warnings 0 src/**",
     "prettier": "prettier --check src/**",
     "prettier:fix": "prettier --write src/**",
+    "lint": "npm run eslint && npm run prettier",
+    "lint:fix": "npm run eslint:fix && npm run prettier:fix",
     "get:stellar": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node ./get-stellar.js",
     "postinstall": "npm run get:stellar",
     "manifest:update": "node manifest-helper.js",
