--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,15 @@
 {
-    "compilerOptions": {
-        "module": "es6",
-        "target": "es6",
-        "noImplicitAny": false,
-        "sourceMap": true,
-        "inlineSources": true,
-        "rootDir": "src",
-        "outDir": "dist/extension/js",
-        "noEmitOnError": true,
-        "typeRoots": [ "node_modules/@types" ],
-        "moduleResolution": "node"
-    }
+  "compilerOptions": {
+    "module": "es6",
+    "target": "es6",
+    "noImplicitAny": false,
+    "sourceMap": true,
+    "inlineSources": true,
+    "rootDir": "src",
+    "outDir": "dist/extension/js",
+    "noEmitOnError": true,
+    "typeRoots": ["node_modules/@types"],
+    "moduleResolution": "node"
+  },
+  "include": ["src/**/*"]
 }
