--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,29 @@ jobs:
           name: compiled-extension
           path: dist/extension
 
+  test-extension:
+    name: Test Extension
+    runs-on: ubuntu-latest
+    needs: build-extension
+
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2.1.4
+        with:
+          node-version: "12"
+
+      - name: Setup Dependencies
+        run: npm ci
+
+      - name: Build Extension
+        run: npm run build
+
+      - name: Test Extension
+        run: npm run test
+
   build-docs:
     name: Build Docs
     runs-on: ubuntu-latest
