--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      - uses: nanasess/setup-chromedriver@master
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.1.4
@@ -57,7 +58,6 @@ jobs:
         run: npm run build
 
       - name: Setup Chrome Driver
-        uses: nanasess/setup-chromedriver@master
         run: |
           export DISPLAY=:99
           chromedriver --url-base=/wd/hub &
