--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,6 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - uses: nanasess/setup-chromedriver@master
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.1.4
@@ -57,11 +56,10 @@ jobs:
       - name: Build Extension
         run: npm run build
 
-      - name: Setup Chrome Driver
+      - name: Setup display for ChromeDriver
         run: |
           export DISPLAY=:99
-          chromedriver --url-base=/wd/hub &
-          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
+          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1
 
       - name: Test Extension
         run: npm run test
