Ensure gets past step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Setup display for ChromeDriver
         run: |
           export DISPLAY=:99
-          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1
+          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & #
 
       - name: Test Extension
         run: npm run test
